# EPP_final_project

./: 2do.txt  CHANGES.md  CITATION  README.md  environment.yml  setup.cfg
paper/: epp_final_project.tex  epp_final_project_pres.tex
src/epp_final_project/: __init__.py
src/epp_final_project/0_scrape_bis/: bis_scraper.py  main.py
src/epp_final_project/1_data_management/: diagnostics.ipynb  functions.py  main.py  populist_data.py
src/epp_final_project/2_analysis/: functions.py  initial_codefile.ipynb  main.py
src/epp_final_project/analysis/: debug.ipynb  functions.py  main.py  table1.text  table2.tex  task_main.py
src/epp_final_project/data/: CBIData_Romelli2022.xlsx
src/epp_final_project/data_management/: functions.py  main.py  task_main.py
src/epp_final_project/scrape_bis/: bis_scraper.py  lists.py  task_main.py
